--- a/KinoProjekt/Pages/Page2.xaml
+++ b/KinoProjekt/Pages/Page2.xaml
@@ -5,9 +5,12 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:KinoProjekt.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800" Background="White"
-      Title="Page1">
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="Page2" Background="White">
+
     <Grid>
-        <Label Content="STRONA 2" FontSize="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <StackPanel x:Name="filmy">
+
+        </StackPanel>
     </Grid>
 </Page>
