--- a/KinoProjekt/Pages/Page3.xaml
+++ b/KinoProjekt/Pages/Page3.xaml
@@ -5,9 +5,15 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:KinoProjekt.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800" Background="White"
-      Title="Page1">
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="Page3" Background="White">
+
     <Grid>
-        <Label Content="STRONA 3" FontSize="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Label Name="tekst" Content="strona 3"/>
+        <Image x:Name="plakat" HorizontalAlignment="Center" VerticalAlignment="Top" Width="120" Height="200"/>
+
+        <Button x:Name="wybierzOkladke" Click="wybierzOkladke_Click" Content="wybierz okladke" Width="100" Height="30"/>
+        <TextBox x:Name="tytul" Height="30" Width="150" Margin="0, 100, 0, 0" Background="LightGray"/>
+        <Button x:Name="dodajFilm" Click="dodajFilm_Click" Content="dodaj film" Width="100" Height="30" Margin="0, 200, 0, 0"/>
     </Grid>
 </Page>
