--- a/KinoProjekt/MainWindow.xaml
+++ b/KinoProjekt/MainWindow.xaml
@@ -56,7 +56,16 @@
         </Border>
 
         <Border x:Name="mainWBack" Grid.Column="0" Height="45" Width="45" Margin="0, 15, 0, 0" MouseLeftButtonDown="mainWBack_Click" BorderBrush="#FF97999C" BorderThickness="3" Background="Transparent" CornerRadius="5">
-            <Path Stretch="Uniform" Width="24" Height="24" Fill="#FF97999C" Data="M17.5098 3.86998L15.7298 2.09998L5.83984 12L15.7398 21.9L17.5098 20.13L9.37984 12L17.5098 3.86998Z"/>
+            <Path Stretch="Uniform" Width="24" Height="24" Fill="#FF97999C" Data="M10.09 15.59L11.5 17L16.5 12L11.5 7L10.09 8.41L12.67 11H3V13H12.67L10.09 15.59ZM19 3H5C3.89 3 3 3.9 3 5V9H5V5H19V19H5V15H3V19C3 20.1 3.89 21 5 21H19C20.1 21 21 20.1 21 19V5C21 3.9 20.1 3 19 3Z" RenderTransformOrigin="0.5,0.5">
+                <Path.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="180"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Path.RenderTransform>
+            </Path>
         </Border>
     </StackPanel>
 </Window>
