--- a/KinoProjekt/LoginWindow.xaml
+++ b/KinoProjekt/LoginWindow.xaml
@@ -17,7 +17,7 @@
             <TextBox x:Name="loginWLogin" Text="" Height="35" BorderThickness="1" Margin="0, 0, 0, 30" BorderBrush="#FF97999C" VerticalContentAlignment="Center"/>
 
             <Label Content="HASŁO" FontFamily="/Fonts/#MontSerrat Bold" FontSize="16"/>
-            <TextBox x:Name="loginWPassword" Text="" Height="35" BorderThickness="1" Margin="0, 0, 0, 0" BorderBrush="#FF97999C" VerticalContentAlignment="Center"/>
+            <PasswordBox x:Name="loginWPassword" Height="35" BorderThickness="1" Margin="0, 0, 0, 0" BorderBrush="#FF97999C" VerticalContentAlignment="Center"/>
 
             <Border x:Name="loginWerror" Background="Transparent" BorderBrush="#dc3545" BorderThickness="3" CornerRadius="2" Margin="0, 10, 0, 10" Visibility="Hidden">
                 <StackPanel Orientation="Horizontal">
