--- a/KinoProjekt/Pages/Page3.xaml
+++ b/KinoProjekt/Pages/Page3.xaml
@@ -8,9 +8,31 @@
       d:DesignHeight="800" d:DesignWidth="1600"
       Title="Page3" Background="White">
 
-    <Grid>
+    <StackPanel>
         <StackPanel x:Name="page3UserView" Visibility="Visible">
-            <Label Name="tekst" Content="strona 3" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0, 100, 0, 0" FontSize="28"/>
+            <StackPanel Margin="0, 50, 0, 0" x:Name="page3UserViewReservations">
+                <Border Visibility="Collapsed" BorderBrush="#0466C8" BorderThickness="3" Margin="500, 10, 500, 0" CornerRadius="3" HorizontalAlignment="Stretch">
+                    <StackPanel Margin="2" HorizontalAlignment="Stretch">
+                        <StackPanel Orientation="Horizontal">
+                            <Path Stretch="Uniform" HorizontalAlignment="Left" Height="32" Width="32" Margin="15, 15, 0, 15" VerticalAlignment="Center" Fill="#0466C8" Data="M19 3H18V1H16V3H8V1H6V3H5C3.9 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V5C21 3.9 20.1 3 19 3ZM19 19H5V9H19V19ZM5 7V5H19V7H5ZM10.56 17.46L16.49 11.53L15.43 10.47L10.56 15.34L8.45 13.23L7.39 14.29L10.56 17.46Z"/>
+                            <Label Content="POTOP" Margin="5, 0, 0, 0" Foreground="#0466C8" VerticalContentAlignment="Center" FontSize="24" FontWeight="Bold"/>
+                        </StackPanel>
+
+                        <Grid HorizontalAlignment="Stretch">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Label Content="MIEJSCE: 54" Grid.Column="0" Margin="10, 0, 0, 0" Foreground="#0466C8" VerticalContentAlignment="Center" FontSize="24" FontWeight="Bold"/>
+
+                            <Border Padding="10, 0, 10, 0" Grid.Column="1" Margin="15, 10, 15, 10" Background="#dc3545" CornerRadius="5" Cursor="Hand" IsEnabled="False">
+                                <Label Content="REZYGNUJ" HorizontalAlignment="Center" Foreground="White" FontFamily="/Fonts/#MontSerrat Bold" Margin="0" FontSize="16"/>
+                            </Border>
+                        </Grid>
+                    </StackPanel>
+                </Border>
+            </StackPanel>
         </StackPanel>
 
         <StackPanel x:Name="page3AdminView" Visibility="Collapsed">
@@ -21,5 +43,5 @@
             <Button x:Name="dodajFilm" Click="dodajFilm_Click" Content="dodaj film" Width="100" Height="30" Margin="0, 200, 0, 0"/>
         </StackPanel>
         
-    </Grid>
+    </StackPanel>
 </Page>
