--- a/KinoProjekt/Pages/Page5.xaml
+++ b/KinoProjekt/Pages/Page5.xaml
@@ -5,8 +5,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:KinoProjekt.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="800" d:DesignWidth="1600" Background="White"
-      Title="Page5">
+      d:DesignHeight="1080" d:DesignWidth="1850" Background="White"
+      Title="INFORMACJE O PROGRAMIE">
     <StackPanel VerticalAlignment="Center">
         <Border Margin="400, 0, 400, 0" BorderBrush="#0466C8" BorderThickness="2" CornerRadius="5" Background="White">
             <StackPanel>
@@ -20,7 +20,7 @@
                         <Border BorderBrush="#0466C8" BorderThickness="3" CornerRadius="30">
                             <StackPanel Orientation="Horizontal" Margin="20, 10, 20, 10">
                                 <Path Stretch="Uniform" Height="48" Width="48" VerticalAlignment="Center" Fill="#0466C8" Data="M21 2H3C1.9 2 1 2.9 1 4V16C1 17.1 1.9 18 3 18H10V20H8V22H16V20H14V18H21C22.1 18 23 17.1 23 16V4C23 2.9 22.1 2 21 2ZM21 16H3V4H21V16Z"/>
-                                <Label Content="WERSJA STABLINA 4.2" Margin="15, 0, 0, 0" Foreground="#0466C8" VerticalContentAlignment="Center" FontSize="24" FontFamily="/Fonts/#Montserrat Bold"/>
+                                <Label Content="WERSJA FINALNA 5.0" Margin="15, 0, 0, 0" Foreground="#0466C8" VerticalContentAlignment="Center" FontSize="24" FontFamily="/Fonts/#Montserrat Bold"/>
                             </StackPanel>
                         </Border>
                         <Label Content="AUTOR PROGRAMU: KRZYSZTOF DENICKI 4PT" Margin="0, 20, 0, 0" Foreground="#FF97999C" VerticalContentAlignment="Center" HorizontalAlignment="Center" FontSize="16" FontFamily="/Fonts/#Montserrat Bold"/>
